--- a/pom.xml
+++ b/pom.xml
@@ -50,13 +50,19 @@
         <dependency>
             <groupId>org.jongo</groupId>
             <artifactId>jongo</artifactId>
-            <version>1.3.0</version>
+            <version>1.4.0</version>
         </dependency>
         <dependency>
             <groupId>com.meltmedia.dropwizard</groupId>
             <artifactId>dropwizard-mongo</artifactId>
             <version>0.5.0</version>
             <scope>import</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.6</version>
+            <scope>provided</scope>
         </dependency>
 
         <!-- Testing -->
