--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
             <version>1.4.0</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-to-slf4j</artifactId>
+            <version>2.7</version>
+        </dependency>
+        <dependency>
             <groupId>com.meltmedia.dropwizard</groupId>
             <artifactId>dropwizard-mongo</artifactId>
             <version>0.5.0</version>
