Add setup scripts

--- a/pom.xml
+++ b/pom.xml
@@ -25,22 +25,11 @@
         <mainClass>com.aashrai.MongoEcommerceServiceApplication</mainClass>
     </properties>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>io.dropwizard</groupId>
-                <artifactId>dropwizard-bom</artifactId>
-                <version>${dropwizard.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-
     <dependencies>
         <dependency>
             <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-core</artifactId>
+            <version>${dropwizard.version}</version>
         </dependency>
         <dependency>
             <groupId>org.mongodb</groupId>
@@ -61,7 +50,6 @@
             <groupId>com.meltmedia.dropwizard</groupId>
             <artifactId>dropwizard-mongo</artifactId>
             <version>0.5.0</version>
-            <scope>import</scope>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -74,9 +62,15 @@
         <dependency>
             <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-testing</artifactId>
+            <version>${dropwizard.version}</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
